--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
 
     <div class="container">
-        <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=BEGIN%3AVCARD%0AVERSION%3A3.0%0AN%3AKhan%3BSameer%0AFN%3ASameer%20Khan%0ATITLE%3AB.A.%20LL.B.%20Honors%0AORG%3ALegal%20%26%20Content%20Creator%0ATEL%3BTYPE%3DCELL%3A%2B919179152006%0AEMAIL%3Asameerkhan78604a%40gmail.com%0AURL%3Ahttps%3A%2F%2Fyoutube.com%2F%40lawyer_sameer%0ANOTE%3AInstagram%3A%20%40_lawyer_sameer%0AEND%3AVCARD" alt="Sameer Khan" class="profile-img">
+        <img src="WhatsApp Image 2026-02-20 at 01.16.24.jpeg" alt="Sameer Khan" class="profile-img">
         
         <h1>Sameer Khan</h1>
         <p class="bio">B.A. LL.B. Honors | Content Creator<br>Legal Awareness</p>
